mobile version fixes

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -8,6 +8,7 @@
   "contact": "Contact",
   "phone": "Phone number",
   "mail": "E-mail address",
+  "residence": "Residence",
   "feb": "FEB",
   "mar": "MAR",
   "apr": "APR",
