--- a/public/locales/pl/translation.json
+++ b/public/locales/pl/translation.json
@@ -8,6 +8,7 @@
   "contact": "Kontakt",
   "phone": "Telefon",
   "mail": "E-mail",
+  "residence": "Lokalizacja",
   "feb": "LUT",
   "mar": "MAR",
   "apr": "KWI",
